feat(feature engineering):menambahkan file modeling yang telah dilakukan feature engineering

--- a/02_Notebooks/03A_Feature_Engineering.ipynb
+++ b/02_Notebooks/03A_Feature_Engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "eadecf34",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "81b19a3f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "b8c1af45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rooms_per_household         0.159258\n",
+      "bedrooms_per_room          -0.253594\n",
+      "population_per_household   -0.030762\n",
+      "median_house_value          1.000000\n",
+      "Name: median_house_value, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Membuat fitur baru\n",
+    "data['rooms_per_household'] = data['total_rooms']/data['households']\n",
+    "data['bedrooms_per_room'] = data['total_bedrooms']/data['total_rooms']\n",
+    "data['population_per_household'] = data['population']/data['households']\n",
+    "\n",
+    "# Memeriksa korelasi fitur baru dengan target\n",
+    "new_features = ['rooms_per_household', 'bedrooms_per_room', 'population_per_household']\n",
+    "print(data[new_features + ['median_house_value']].corr()['median_house_value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "9583e4b4",
    "metadata": {},
    "outputs": [],
@@ -47,7 +76,7 @@
     "\n",
     "# Preprocessing pipeline\n",
     "numeric_features = ['longitude', 'latitude', 'housing_median_age', 'total_rooms',\n",
-    "                    'total_bedrooms', 'population', 'households', 'median_income']\n",
+    "                    'total_bedrooms', 'population', 'households', 'median_income', 'rooms_per_household', 'bedrooms_per_room', 'population_per_household']\n",
     "categorical_features = ['ocean_proximity']\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
@@ -59,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "2709473d",
    "metadata": {},
    "outputs": [
@@ -68,14 +97,14 @@
      "output_type": "stream",
      "text": [
       "Linear Regression: R-squared = 0.637\n",
-      "Ridge Regression: R-squared = 0.637\n"
+      "Ridge Regression: R-squared = 0.638\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\PurwadhikaBackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\Lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:695: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.595e+12, tolerance: 1.537e+10\n",
+      "d:\\PurwadhikaBackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\Lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:695: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.538e+12, tolerance: 1.537e+10\n",
       "  model = cd_fast.enet_coordinate_descent(\n"
      ]
     },
@@ -84,9 +113,9 @@
      "output_type": "stream",
      "text": [
       "Lasso Regression: R-squared = 0.637\n",
-      "Decision Tree: R-squared = 0.613\n",
-      "Random Forest: R-squared = 0.813\n",
-      "XGBoost: R-squared = 0.818\n"
+      "Decision Tree: R-squared = 0.617\n",
+      "Random Forest: R-squared = 0.807\n",
+      "XGBoost: R-squared = 0.830\n"
      ]
     }
    ],
