--- a/04_Script/00_Library_Import.ipynb
+++ b/04_Script/00_Library_Import.ipynb
@@ -15,8 +15,8 @@
       "Requirement already satisfied: matplotlib in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (3.10.3)\n",
       "Requirement already satisfied: seaborn in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (0.13.2)\n",
       "Requirement already satisfied: scikit-learn in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (1.6.1)\n",
-      "Collecting xgboost\n",
-      "  Using cached xgboost-3.0.0-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: xgboost in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (3.0.0)\n",
+      "Requirement already satisfied: joblib in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (1.5.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from pandas) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from pandas) (2025.2)\n",
@@ -28,12 +28,8 @@
       "Requirement already satisfied: pillow>=8 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from matplotlib) (11.2.1)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from matplotlib) (3.2.3)\n",
       "Requirement already satisfied: scipy>=1.6.0 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from scikit-learn) (1.15.3)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from scikit-learn) (1.5.0)\n",
       "Requirement already satisfied: threadpoolctl>=3.1.0 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
       "Requirement already satisfied: six>=1.5 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Using cached xgboost-3.0.0-py3-none-win_amd64.whl (150.0 MB)\n",
-      "Installing collected packages: xgboost\n",
-      "Successfully installed xgboost-3.0.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -48,7 +44,7 @@
     }
    ],
    "source": [
-    "%pip install pandas numpy matplotlib seaborn scikit-learn xgboost"
+    "%pip install pandas numpy matplotlib seaborn scikit-learn xgboost joblib"
    ]
   }
  ],
