feat(tuning): menambahkan file model tuning selesai melakukan proses hyper parameter tuning menggunakan randomsearch grid dan menhasilkan model baru

--- a/02_Notebooks/01_EDA.ipynb
+++ b/02_Notebooks/01_EDA.ipynb
@@ -382,6 +382,118 @@
    "source": [
     "# df_after = pd.read_csv('../01_Data/data_california_house_cleaned.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b03104d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../01_Data/data_california_house_prepared.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6e076adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14448 entries, 0 to 14447\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   longitude           14448 non-null  float64\n",
+      " 1   latitude            14448 non-null  float64\n",
+      " 2   housing_median_age  14448 non-null  float64\n",
+      " 3   total_rooms         14448 non-null  float64\n",
+      " 4   total_bedrooms      14448 non-null  float64\n",
+      " 5   population          14448 non-null  float64\n",
+      " 6   households          14448 non-null  float64\n",
+      " 7   median_income       14448 non-null  float64\n",
+      " 8   ocean_proximity     14448 non-null  object \n",
+      " 9   median_house_value  14448 non-null  float64\n",
+      "dtypes: float64(9), object(1)\n",
+      "memory usage: 1.1+ MB\n",
+      "None\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "          longitude      latitude  housing_median_age   total_rooms  \\\n",
+      "count  14448.000000  14448.000000        14448.000000  14448.000000   \n",
+      "mean    -119.566647     35.630093           28.618702   2640.132683   \n",
+      "std        2.006587      2.140121           12.596694   2191.612441   \n",
+      "min     -124.350000     32.540000            1.000000      2.000000   \n",
+      "25%     -121.800000     33.930000           18.000000   1451.000000   \n",
+      "50%     -118.490000     34.260000           29.000000   2125.000000   \n",
+      "75%     -118.000000     37.710000           37.000000   3148.000000   \n",
+      "max     -114.310000     41.950000           52.000000  32627.000000   \n",
+      "\n",
+      "       total_bedrooms    population    households  median_income  \\\n",
+      "count    14448.000000  14448.000000  14448.000000   14448.000000   \n",
+      "mean       537.714597   1425.157323    499.508929       3.866667   \n",
+      "std        422.419876   1149.580157    383.098390       1.891158   \n",
+      "min          1.000000      3.000000      1.000000       0.499900   \n",
+      "25%        295.000000    784.000000    279.000000       2.570600   \n",
+      "50%        435.000000   1165.000000    410.000000       3.539100   \n",
+      "75%        647.000000   1724.000000    604.000000       4.736100   \n",
+      "max       6445.000000  35682.000000   6082.000000      15.000100   \n",
+      "\n",
+      "       median_house_value  \n",
+      "count        14448.000000  \n",
+      "mean        206824.624516  \n",
+      "std         115365.476182  \n",
+      "min          14999.000000  \n",
+      "25%         119600.000000  \n",
+      "50%         180000.000000  \n",
+      "75%         263900.000000  \n",
+      "max         500001.000000  \n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "longitude             0\n",
+      "latitude              0\n",
+      "housing_median_age    0\n",
+      "total_rooms           0\n",
+      "total_bedrooms        0\n",
+      "population            0\n",
+      "households            0\n",
+      "median_income         0\n",
+      "ocean_proximity       0\n",
+      "median_house_value    0\n",
+      "dtype: int64\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Jumlah data duplikat: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Informasi dasar tentang dataset\n",
+    "print('')\n",
+    "print('----------------------------------------------------------------------------------------------------')\n",
+    "print(df.info())\n",
+    "\n",
+    "# Statistik deskriptif\n",
+    "print('')\n",
+    "print('----------------------------------------------------------------------------------------------------')\n",
+    "print(df.describe())\n",
+    "\n",
+    "# Cek missing values\n",
+    "print('')\n",
+    "print('----------------------------------------------------------------------------------------------------')\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# Cek duplikat\n",
+    "print('')\n",
+    "print('----------------------------------------------------------------------------------------------------')\n",
+    "print(f\"Jumlah data duplikat: {df.duplicated().sum()}\")"
+   ]
   }
  ],
  "metadata": {
