--- a/04_Script/00_Library_Import.ipynb
+++ b/04_Script/00_Library_Import.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4323fc5f",
    "metadata": {},
    "outputs": [
@@ -17,6 +17,8 @@
       "Requirement already satisfied: scikit-learn in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (1.6.1)\n",
       "Requirement already satisfied: xgboost in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (3.0.0)\n",
       "Requirement already satisfied: joblib in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (1.5.0)\n",
+      "Collecting statsmodels\n",
+      "  Using cached statsmodels-0.14.4-cp312-cp312-win_amd64.whl.metadata (9.5 kB)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from pandas) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from pandas) (2025.2)\n",
@@ -29,7 +31,13 @@
       "Requirement already satisfied: pyparsing>=2.3.1 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from matplotlib) (3.2.3)\n",
       "Requirement already satisfied: scipy>=1.6.0 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from scikit-learn) (1.15.3)\n",
       "Requirement already satisfied: threadpoolctl>=3.1.0 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
+      "Collecting patsy>=0.5.6 (from statsmodels)\n",
+      "  Using cached patsy-1.0.1-py2.py3-none-any.whl.metadata (3.3 kB)\n",
       "Requirement already satisfied: six>=1.5 in d:\\purwadhikabackup\\capstoneproject\\modultiga\\california_housing_price_prediction\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Using cached statsmodels-0.14.4-cp312-cp312-win_amd64.whl (9.8 MB)\n",
+      "Using cached patsy-1.0.1-py2.py3-none-any.whl (232 kB)\n",
+      "Installing collected packages: patsy, statsmodels\n",
+      "Successfully installed patsy-1.0.1 statsmodels-0.14.4\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -44,7 +52,7 @@
     }
    ],
    "source": [
-    "%pip install pandas numpy matplotlib seaborn scikit-learn xgboost joblib"
+    "%pip install pandas numpy matplotlib seaborn scikit-learn xgboost joblib statsmodels"
    ]
   }
  ],
